--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="打包配置，gradle配置"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
+   <Button
+       android:id="@+id/bt_1"
+       android:text="rxText"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content" />
+   <Button
+       android:id="@+id/bt_2"
+       android:text="rxText"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content" />
+   <Button
+       android:id="@+id/bt_3"
+       android:text="rxText"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content" />
+</LinearLayout>
