--- a/app/src/main/res/layout/activity_rx_net.xml
+++ b/app/src/main/res/layout/activity_rx_net.xml
@@ -3,8 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="#ffffff"
     android:layout_height="match_parent"
     tools:context=".activity.RxNetActivity">
+    <Button
+        android:onClick="start"
+        android:text="start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/tv"
         android:padding="20dp"
