--- a/app/src/main/res/layout/activity_rx_net.xml
+++ b/app/src/main/res/layout/activity_rx_net.xml
@@ -1,28 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="#ffffff"
     android:layout_height="match_parent"
     tools:context=".activity.RxNetActivity">
-    <Button
-        android:onClick="start"
-        android:text="start"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/tv"
-        android:padding="20dp"
-        android:text=""
-        android:layout_width="match_parent"
-        android:layout_height="100dp" />
-    <TextView
-        android:id="@+id/tv_rx"
-        android:padding="2dp"
-        android:gravity="center"
-        android:textColor="#ff4377"
-        android:text=""
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-</LinearLayout>
+        android:orientation="vertical"
+        android:background="#ffffff"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/bt_start"
+            android:onClick="start"
+            android:text="start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv"
+            android:padding="20dp"
+            android:text=""
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/tv_rx"
+            android:padding="2dp"
+            android:gravity="center"
+            android:textColor="#ff4377"
+            android:text=""
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+</ScrollView>
